--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,13 @@ version = "0.1.0"
 description = ""
 authors = ["notEloiir <igorsikora24@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
 torch = "^2.5.1"
-torchvision = "^0.20.1"
-torchaudio = "^2.5.1"
 pytorch-lightning = "^2.4.0"
 transformers = "^4.47.1"
-
 
 [build-system]
 requires = ["poetry-core"]
