--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 torch = "^2.5.1"
 pytorch-lightning = "^2.4.0"
 transformers = "^4.47.1"
+tensorboardx = "^2.6.2.2"
 
 [build-system]
 requires = ["poetry-core"]
