--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ torch = "^2.5.1"
 pytorch-lightning = "^2.4.0"
 transformers = "^4.47.1"
 tensorboardx = "^2.6.2.2"
+datasets = "^3.2.0"
 
 [build-system]
 requires = ["poetry-core"]
